[gd_scene load_steps=43 format=3 uid="uid://cma0bkevj2j4y"]

[ext_resource type="Script" path="res://MainCharacter/MainCharacter.gd" id="1_kimwa"]
[ext_resource type="Texture2D" uid="uid://d17sv652d8p78" path="res://assets/human/walk_cycle.PNG" id="2_fux7m"]
[ext_resource type="Texture2D" uid="uid://b5kbvuovpb56d" path="res://assets/human/walk_cycle_background.PNG" id="3_luih8"]
[ext_resource type="Texture2D" uid="uid://d0b0tft3a5y07" path="res://assets/human/idle_1.png" id="4_g47cf"]
[ext_resource type="Texture2D" uid="uid://dbi3vjofylpqo" path="res://assets/human/idle_2.png" id="5_gohj5"]
[ext_resource type="AudioStream" uid="uid://d4jtvm0yjl84o" path="res://assets/audio/sfx/object interaction - ui/sfx_menu_button_click.wav" id="7_vmebr"]
[ext_resource type="AudioStream" uid="uid://c7odc526tno74" path="res://assets/audio/sfx/footsteps/sfx_footsteps_inside_1.wav" id="8_3pt4b"]
[ext_resource type="AudioStream" uid="uid://b4y2mqi4m4c1b" path="res://assets/audio/sfx/footsteps/sfx_footsteps_inside_2.wav" id="9_4p42l"]
[ext_resource type="AudioStream" uid="uid://hfhp5txl3pqk" path="res://assets/audio/sfx/footsteps/sfx_footsteps_inside_3.wav" id="10_bmjvi"]
[ext_resource type="AudioStream" uid="uid://chjbefuxtngj2" path="res://assets/audio/sfx/footsteps/sfx_footsteps_inside_4.wav" id="11_uh0k8"]
[ext_resource type="AudioStream" uid="uid://b4ne0w7t6j7mg" path="res://assets/audio/sfx/footsteps/sfx_footsteps_inside_5.wav" id="12_4b4pa"]
[ext_resource type="AudioStream" uid="uid://klha3qkixgbp" path="res://assets/audio/sfx/footsteps/sfx_footstep_outside_1.wav" id="13_hqo5p"]
[ext_resource type="AudioStream" uid="uid://c7wdyrbekec4n" path="res://assets/audio/sfx/footsteps/sfx_footstep_outside_2.wav" id="14_4fscc"]
[ext_resource type="AudioStream" uid="uid://bdicjqj0cd5vn" path="res://assets/audio/sfx/footsteps/sfx_footstep_outside_3.wav" id="15_ns2o7"]
[ext_resource type="AudioStream" uid="uid://dwothmlrug0ab" path="res://assets/audio/sfx/footsteps/sfx_footstep_outside_4.wav" id="16_pbko7"]
[ext_resource type="AudioStream" uid="uid://c556mynpoaduw" path="res://assets/audio/sfx/footsteps/sfx_footstep_outside_5.wav" id="17_gcgqv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fljcm"]
size = Vector2(53, 174)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiv4m"]
atlas = ExtResource("3_luih8")
region = Rect2(990, 0, 990, 1790)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8gfm"]
atlas = ExtResource("3_luih8")
region = Rect2(2970, 1790, 990, 1790)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qym4"]
atlas = ExtResource("3_luih8")
region = Rect2(0, 0, 990, 1790)

[sub_resource type="AtlasTexture" id="AtlasTexture_70oa1"]
atlas = ExtResource("3_luih8")
region = Rect2(990, 0, 990, 1790)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxpfs"]
atlas = ExtResource("3_luih8")
region = Rect2(1980, 0, 990, 1790)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgv6x"]
atlas = ExtResource("3_luih8")
region = Rect2(2970, 0, 990, 1790)

[sub_resource type="AtlasTexture" id="AtlasTexture_1loi2"]
atlas = ExtResource("3_luih8")
region = Rect2(3960, 0, 990, 1790)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vmgm"]
atlas = ExtResource("3_luih8")
region = Rect2(0, 1790, 990, 1790)

[sub_resource type="AtlasTexture" id="AtlasTexture_orf47"]
atlas = ExtResource("3_luih8")
region = Rect2(990, 1790, 990, 1790)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcxnx"]
atlas = ExtResource("3_luih8")
region = Rect2(1980, 1790, 990, 1790)

[sub_resource type="AtlasTexture" id="AtlasTexture_klggw"]
atlas = ExtResource("3_luih8")
region = Rect2(2970, 1790, 990, 1790)

[sub_resource type="AtlasTexture" id="AtlasTexture_swrvw"]
atlas = ExtResource("3_luih8")
region = Rect2(3960, 1790, 990, 1790)

[sub_resource type="SpriteFrames" id="SpriteFrames_lvkf5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiv4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8gfm")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qym4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70oa1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxpfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgv6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1loi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vmgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_orf47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcxnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klggw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swrvw")
}],
"loop": true,
"name": &"walk_cycle",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_gx1oi"]
atlas = ExtResource("2_fux7m")
region = Rect2(0, 0, 990, 1790)

[sub_resource type="AtlasTexture" id="AtlasTexture_rp8f7"]
atlas = ExtResource("2_fux7m")
region = Rect2(990, 0, 990, 1790)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxgls"]
atlas = ExtResource("2_fux7m")
region = Rect2(1980, 0, 990, 1790)

[sub_resource type="AtlasTexture" id="AtlasTexture_aru46"]
atlas = ExtResource("2_fux7m")
region = Rect2(2970, 0, 990, 1790)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0nkp"]
atlas = ExtResource("2_fux7m")
region = Rect2(0, 1790, 990, 1790)

[sub_resource type="AtlasTexture" id="AtlasTexture_l76e3"]
atlas = ExtResource("2_fux7m")
region = Rect2(990, 1790, 990, 1790)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn5vj"]
atlas = ExtResource("2_fux7m")
region = Rect2(1980, 1790, 990, 1790)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuacu"]
atlas = ExtResource("2_fux7m")
region = Rect2(2970, 1790, 990, 1790)

[sub_resource type="SpriteFrames" id="SpriteFrames_sphv2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_g47cf")
}, {
"duration": 1.0,
"texture": ExtResource("5_gohj5")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx1oi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rp8f7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxgls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aru46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0nkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l76e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn5vj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuacu")
}],
"loop": true,
"name": &"walk_cycle",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_wrw12"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_6o3xu"]
font_size = 30

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qj5ut"]
radius = 114.0
height = 468.0

[node name="MainCharacter" type="CharacterBody2D"]
top_level = true
script = ExtResource("1_kimwa")

[node name="PlayerArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2(0.5, 0)
scale = Vector2(2.55494, 2.46941)
shape = SubResource("RectangleShape2D_fljcm")

[node name="SpriteColor" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.249997, 0)
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_lvkf5")
animation = &"walk_cycle"
frame_progress = 0.0201132

[node name="SpriteOutline" type="AnimatedSprite2D" parent="."]
modulate = Color(0.37, 0.37, 0.37, 1)
self_modulate = Color(1, 1, 1, 0.945098)
position = Vector2(-3, -2)
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_sphv2")
animation = &"idle"
frame_progress = 0.00721624

[node name="Wander" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 13.0
offset_top = -257.0
offset_right = 53.0
offset_bottom = -215.0
text = "!
"
label_settings = SubResource("LabelSettings_wrw12")

[node name="IdleText" type="Label" parent="."]
visible = false
offset_left = 11.0
offset_top = -260.0
offset_right = 51.0
offset_bottom = -218.0
text = "..."
label_settings = SubResource("LabelSettings_6o3xu")

[node name="InteractableArea" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_qj5ut")

[node name="SFX" type="Node" parent="."]

[node name="PlayerHit" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("7_vmebr")

[node name="FootstepsInside1" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("8_3pt4b")

[node name="FootstepsInside2" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("9_4p42l")

[node name="FootstepsInside3" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("10_bmjvi")

[node name="FootstepsInside4" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("11_uh0k8")

[node name="FootstepsInside5" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("12_4b4pa")

[node name="FootstepsOutside1" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("13_hqo5p")

[node name="FootstepsOutside2" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("14_4fscc")

[node name="FootstepsOutside3" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("15_ns2o7")

[node name="FootstepsOutside4" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("16_pbko7")

[node name="FootstepsOutside5" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("17_gcgqv")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="PlayerArea" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Wander" to="." method="_on_wander_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_footsteps_timer_timeout"]
